openmetadata-docs/content/v1.10.x-SNAPSHOT/main-concepts/metadata-standard/schemas/entity/data/table.md
---
title: table
slug: /main-concepts/metadata-standard/schemas/entity/data/table
---

# Table

*A `Table` entity organizes data in rows and columns and is defined in a `Database Schema`.*

## Properties

- **`id`**: Unique identifier of this table instance. Refer to *../../type/basic.json#/definitions/uuid*.
- **`name`**: Name of a table. Expected to be unique within a database. Refer to *../../type/basic.json#/definitions/entityName*.
- **`displayName`** *(string)*: Display Name that identifies this table. It could be title or label from the source services.
- **`fullyQualifiedName`**: Fully qualified name of a table in the form `serviceName.databaseName.tableName`. Refer to *../../type/basic.json#/definitions/fullyQualifiedEntityName*.
- **`description`**: Description of a table. Refer to *../../type/basic.json#/definitions/markdown*.
- **`version`**: Metadata version of the entity. Refer to *../../type/entityHistory.json#/definitions/entityVersion*.
- **`updatedAt`**: Last update time corresponding to the new version of the entity in Unix epoch time milliseconds. Refer to *../../type/basic.json#/definitions/timestamp*.
- **`updatedBy`** *(string)*: User who made the update.
- **`href`**: Link to this table resource. Refer to *../../type/basic.json#/definitions/href*.
- **`tableType`**: Refer to *#/definitions/tableType*.
- **`columns`** *(array)*: Columns in this table.
  - **Items**: Refer to *#/definitions/column*.
- **`tableConstraints`** *(array)*: Table constraints. Default: `None`.
  - **Items**: Refer to *#/definitions/tableConstraint*.
- **`tablePartition`**: Refer to *#/definitions/tablePartition*.
- **`owners`**: Owners of this table. Refer to *../../type/entityReferenceList.json*. Default: `None`.
- **`databaseSchema`**: Reference to database schema that contains this table. Refer to *../../type/entityReference.json*.
- **`database`**: Reference to Database that contains this table. Refer to *../../type/entityReference.json*.
- **`service`**: Link to Database service this table is hosted in. Refer to *../../type/entityReference.json*.
- **`serviceType`**: Service type this table is hosted in. Refer to *../services/databaseService.json#/definitions/databaseServiceType*.
- **`location`**: Reference to the Location that contains this table. Refer to *../../type/entityReference.json*.
- **`locationPath`** *(string)*: Full storage path in case of external and managed tables. Default: `None`.
- **`schemaDefinition`**: DDL for Tables and Views. Refer to *../../type/basic.json#/definitions/sqlQuery*.
- **`tags`** *(array)*: Tags for this table. Default: `None`.
  - **Items**: Refer to *../../type/tagLabel.json*.
- **`usageSummary`**: Latest usage information for this table. Refer to *../../type/usageDetails.json*. Default: `None`.
- **`followers`**: Followers of this table. Refer to *../../type/entityReferenceList.json*.
- **`joins`**: Details of other tables this table is frequently joined with. Refer to *#/definitions/tableJoins*. Default: `None`.
- **`sampleData`**: Sample data for a table. Refer to *#/definitions/tableData*. Default: `None`.
- **`tableProfilerConfig`**: Table Profiler Config to include or exclude columns from profiling. Refer to *#/definitions/tableProfilerConfig*.
- **`customMetrics`** *(array)*: List of Custom Metrics registered for a table. Default: `None`.
  - **Items**: Refer to *../../tests/customMetric.json*.
- **`profile`**: Latest Data profile for a table. Refer to *#/definitions/tableProfile*. Default: `None`.
- **`testSuite`**: Executable test suite associated with this table. Refer to *../../type/entityReference.json*.
- **`dataModel`**: This captures information about how the table is modeled. Currently only DBT model is supported. Refer to *#/definitions/dataModel*.
- **`changeDescription`**: Change that lead to this version of the entity. Refer to *../../type/entityHistory.json#/definitions/changeDescription*.
- **`incrementalChangeDescription`**: Change that lead to this version of the entity. Refer to *../../type/entityHistory.json#/definitions/changeDescription*.
- **`deleted`** *(boolean)*: When `true` indicates the entity has been soft deleted. Default: `False`.
- **`retentionPeriod`**: Retention period of the data in the table. Period is expressed as duration in ISO 8601 format in UTC. Example - `P23DT23H`. When not set, the retention period is inherited from the parent database schema, if it exists. Refer to *../../type/basic.json#/definitions/duration*.
- **`extension`**: Entity extension data with custom attributes added to the entity. Refer to *../../type/basic.json#/definitions/entityExtension*.
- **`sourceUrl`**: Source URL of table. Refer to *../../type/basic.json#/definitions/sourceUrl*.
- **`domains`**: Domains the asset belongs to. When not set, the asset inherits the domain from the parent it belongs to. Refer to *../../type/entityReferenceList.json*.
- **`dataProducts`**: List of data products this entity is part of. Refer to *../../type/entityReferenceList.json*.
- **`fileFormat`**: File format in case of file/datalake tables. Refer to *#/definitions/fileFormat*.
- **`votes`**: Votes on the entity. Refer to *../../type/votes.json*.
- **`lifeCycle`**: Life Cycle of the entity. Refer to *../../type/lifeCycle.json*.
- **`certification`**: Refer to *../../type/assetCertification.json*.
- **`sourceHash`** *(string)*: Source hash of the entity.
- **`processedLineage`** *(boolean)*: Processed lineage for the table. Default: `False`.
- **`queries`** *(array)*: List of queries that are used to create this table. Default: `None`.
  - **Items**: Refer to *../../type/basic.json#/definitions/sqlQuery*.
## Definitions

- **`profileSampleType`** *(string)*: Type of Profile Sample (percentage or rows). Must be one of: `['PERCENTAGE', 'ROWS']`. Default: `PERCENTAGE`.
- **`samplingMethodType`** *(string)*: Type of Sampling Method (BERNOULLI or SYSTEM). Must be one of: `['BERNOULLI', 'SYSTEM']`.
- **`tableType`** *(string)*: This schema defines the type used for describing different types of tables. Must be one of: `['Regular', 'External', 'Dynamic', 'View', 'SecureView', 'MaterializedView', 'Iceberg', 'Local', 'Partitioned', 'Foreign', 'Transient', 'Stream']`.
- **`dataType`** *(string)*: This enum defines the type of data stored in a column. Must be one of: `['NUMBER', 'TINYINT', 'SMALLINT', 'INT', 'BIGINT', 'BYTEINT', 'BYTES', 'FLOAT', 'DOUBLE', 'DECIMAL', 'NUMERIC', 'TIMESTAMP', 'TIMESTAMPZ', 'TIME', 'DATE', 'DATETIME', 'INTERVAL', 'STRING', 'MEDIUMTEXT', 'TEXT', 'CHAR', 'LONG', 'VARCHAR', 'BOOLEAN', 'BINARY', 'VARBINARY', 'ARRAY', 'BLOB', 'LONGBLOB', 'MEDIUMBLOB', 'MAP', 'STRUCT', 'UNION', 'SET', 'GEOGRAPHY', 'ENUM', 'JSON', 'UUID', 'VARIANT', 'GEOMETRY', 'BYTEA', 'AGGREGATEFUNCTION', 'ERROR', 'FIXED', 'RECORD', 'NULL', 'SUPER', 'HLLSKETCH', 'PG_LSN', 'PG_SNAPSHOT', 'TSQUERY', 'TXID_SNAPSHOT', 'XML', 'MACADDR', 'TSVECTOR', 'UNKNOWN', 'CIDR', 'INET', 'CLOB', 'ROWID', 'LOWCARDINALITY', 'YEAR', 'POINT', 'POLYGON', 'TUPLE', 'SPATIAL', 'TABLE', 'NTEXT', 'IMAGE', 'IPV4', 'IPV6', 'DATETIMERANGE', 'HLL', 'LARGEINT', 'QUANTILE_STATE', 'AGG_STATE', 'BITMAP', 'UINT', 'BIT', 'MONEY', 'MEASURE HIDDEN', 'MEASURE VISIBLE', 'MEASURE', 'KPI', 'HEIRARCHY']`.
- **`constraint`** *(string)*: This enum defines the type for column constraint. Must be one of: `['NULL', 'NOT_NULL', 'UNIQUE', 'PRIMARY_KEY']`. Cannot contain additional properties. Default: `None`.
- **`tableConstraint`** *(object)*: This enum defines the type for table constraint. Cannot contain additional properties.
  - **`constraintType`** *(string)*: Must be one of: `['UNIQUE', 'PRIMARY_KEY', 'FOREIGN_KEY', 'SORT_KEY', 'DIST_KEY', 'CLUSTER_KEY']`.
  - **`columns`** *(array)*: List of column names corresponding to the constraint.
    - **Items** *(string)*
  - **`referredColumns`** *(array)*: List of referred columns for the constraint. Default: `None`.
    - **Items**: Refer to *../../type/basic.json#/definitions/fullyQualifiedEntityName*.
  - **`relationshipType`** *(string)*: Must be one of: `['ONE_TO_ONE', 'ONE_TO_MANY', 'MANY_TO_ONE', 'MANY_TO_MANY']`.
- **`columnName`** *(string)*: Local name (not fully qualified name) of the column. ColumnName is `-` when the column is not named in struct dataType. For example, BigQuery supports struct with unnamed fields.
- **`partitionIntervalTypes`** *(string)*: type of partition interval. Must be one of: `['TIME-UNIT', 'INTEGER-RANGE', 'INGESTION-TIME', 'COLUMN-VALUE', 'INJECTED', 'ENUM', 'OTHER']`.
- **`tablePartition`** *(object)*: This schema defines the partition column of a table and format the partition is created. Cannot contain additional properties.
  - **`columns`** *(array)*: List of column partitions with their type and interval.
    - **Items**: Refer to *#/definitions/partitionColumnDetails*.
- **`partitionColumnDetails`** *(object)*: This schema defines the partition column of a table and format the partition is created. Cannot contain additional properties.
  - **`columnName`** *(string)*: List of column names corresponding to the partition.
  - **`intervalType`**: Refer to *#/definitions/partitionIntervalTypes*.
  - **`interval`** *(string)*: partition interval , example hourly, daily, monthly.
- **`column`** *(object)*: This schema defines the type for a column in a table. Cannot contain additional properties.
  - **`name`**: Refer to *#/definitions/columnName*.
  - **`displayName`** *(string)*: Display Name that identifies this column name.
  - **`dataType`**: Data type of the column (int, date etc.). Refer to *#/definitions/dataType*.
  - **`arrayDataType`**: Data type used array in dataType. For example, `array<int>` has dataType as `array` and arrayDataType as `int`. Refer to *#/definitions/dataType*.
  - **`dataLength`** *(integer)*: Length of `char`, `varchar`, `binary`, `varbinary` `dataTypes`, else null. For example, `varchar(20)` has dataType as `varchar` and dataLength as `20`.
  - **`precision`** *(integer)*: The precision of a numeric is the total count of significant digits in the whole number, that is, the number of digits to both sides of the decimal point. Precision is applicable Integer types, such as `INT`, `SMALLINT`, `BIGINT`, etc. It also applies to other Numeric types, such as `NUMBER`, `DECIMAL`, `DOUBLE`, `FLOAT`, etc.
  - **`scale`** *(integer)*: The scale of a numeric is the count of decimal digits in the fractional part, to the right of the decimal point. For Integer types, the scale is `0`. It mainly applies to non Integer Numeric types, such as `NUMBER`, `DECIMAL`, `DOUBLE`, `FLOAT`, etc.
  - **`dataTypeDisplay`** *(string)*: Display name used for dataType. This is useful for complex types, such as `array<int>`, `map<int,string>`, `struct<>`, and union types.
  - **`description`**: Description of the column. Refer to *../../type/basic.json#/definitions/markdown*.
  - **`fullyQualifiedName`**: Refer to *../../type/basic.json#/definitions/fullyQualifiedEntityName*.
  - **`tags`** *(array)*: Tags associated with the column. Default: `[]`.
    - **Items**: Refer to *../../type/tagLabel.json*.
  - **`constraint`**: Column level constraint. Refer to *#/definitions/constraint*.
  - **`ordinalPosition`** *(integer)*: Ordinal position of the column.
  - **`jsonSchema`** *(string)*: Json schema only if the dataType is JSON else null.
  - **`children`** *(array)*: Child columns if dataType or arrayDataType is `map`, `struct`, or `union` else `null`.
    - **Items**: Refer to *#/definitions/column*.
  - **`profile`**: Latest Data profile for a Column. Refer to *#/definitions/columnProfile*. Default: `None`.
  - **`customMetrics`** *(array)*: List of Custom Metrics registered for a table. Default: `None`.
    - **Items**: Refer to *../../tests/customMetric.json*.
- **`joinedWith`** *(object)*: Fully qualified names of the fields/entities that this field/entity is joined with. Cannot contain additional properties.
  - **`fullyQualifiedName`**: Refer to *../../type/basic.json#/definitions/fullyQualifiedEntityName*.
  - **`joinCount`** *(integer)*
- **`columnJoins`** *(object)*: This schema defines the type to capture how frequently a column is joined with columns in the other tables. Cannot contain additional properties.
  - **`columnName`**: Refer to *#/definitions/columnName*.
  - **`joinedWith`** *(array)*: Fully qualified names of the columns that this column is joined with.
    - **Items**: Refer to *#/definitions/joinedWith*.
- **`tableJoins`** *(object)*: This schema defines the type to capture information about how this table is joined with other tables and columns. Cannot contain additional properties.
  - **`startDate`**: Date can be only from today going back to last 29 days. Refer to *../../type/basic.json#/definitions/date*.
  - **`dayCount`** *(integer)*: Default: `1`.
  - **`columnJoins`** *(array)*
    - **Items**: Refer to *#/definitions/columnJoins*.
  - **`directTableJoins`** *(array)*: Joins with other tables that are not on a specific column (e.g: UNION join).
    - **Items**: Refer to *#/definitions/joinedWith*.
- **`tableData`** *(object)*: This schema defines the type to capture rows of sample data for a table. Cannot contain additional properties.
  - **`columns`** *(array)*: List of local column names (not fully qualified column names) of the table.
    - **Items**: Refer to *#/definitions/columnName*.
  - **`rows`** *(array)*: Data for multiple rows of the table.
    - **Items** *(array)*: Data for a single row of the table within the same order as columns fields.
- **`customMetricProfile`** *(object)*: Profiling results of a Custom Metric. Cannot contain additional properties.
  - **`name`** *(string)*: Custom metric name.
  - **`value`** *(number)*: Profiling results for the metric.
- **`columnProfile`** *(object)*: This schema defines the type to capture the table's column profile. Cannot contain additional properties.
  - **`name`** *(string)*: Column Name.
  - **`timestamp`**: Timestamp on which profile is taken. Refer to *../../type/basic.json#/definitions/timestamp*.
  - **`valuesCount`** *(number)*: Total count of the values in this column.
  - **`valuesPercentage`** *(number)*: Percentage of values in this column with respect to row count.
  - **`validCount`** *(number)*: Total count of valid values in this column.
  - **`duplicateCount`** *(number)*: No.of Rows that contain duplicates in a column.
  - **`nullCount`** *(number)*: No.of null values in a column.
  - **`nullProportion`** *(number)*: No.of null value proportion in columns.
  - **`missingPercentage`** *(number)*: Missing Percentage is calculated by taking percentage of validCount/valuesCount.
  - **`missingCount`** *(number)*: Missing count is calculated by subtracting valuesCount - validCount.
  - **`uniqueCount`** *(number)*: No. of unique values in the column.
  - **`uniqueProportion`** *(number)*: Proportion of number of unique values in a column.
  - **`distinctCount`** *(number)*: Number of values that contain distinct values.
  - **`distinctProportion`** *(number)*: Proportion of distinct values in a column.
  - **`min`**: Minimum value in a column.
  - **`max`**: Maximum value in a column.
  - **`minLength`** *(number)*: Minimum string length in a column.
  - **`maxLength`** *(number)*: Maximum string length in a column.
  - **`mean`** *(number)*: Avg value in a column.
  - **`sum`** *(number)*: Median value in a column.
  - **`stddev`** *(number)*: Standard deviation of a column.
  - **`variance`** *(number)*: Variance of a column.
  - **`median`** *(number)*: Median of a column.
  - **`firstQuartile`** *(number)*: First quartile of a column.
  - **`thirdQuartile`** *(number)*: First quartile of a column.
  - **`interQuartileRange`** *(number)*: Inter quartile range of a column.
  - **`nonParametricSkew`** *(number)*: Non parametric skew of a column.
  - **`histogram`**: Histogram of a column. Cannot contain additional properties.
    - **`boundaries`** *(array)*: Boundaries of Histogram.
    - **`frequencies`** *(array)*: Frequencies of Histogram.
  - **`customMetrics`** *(array)*: Custom Metrics profile list bound to a column. Default: `None`.
    - **Items**: Refer to *#/definitions/customMetricProfile*.
- **`dmlOperationType`** *(string)*: This schema defines the type of DML operation. Must be one of: `['UPDATE', 'INSERT', 'DELETE', 'WRITE']`.
- **`systemProfile`** *(object)*: This schema defines the System Profile object holding profile data from system tables.
  - **`timestamp`**: Timestamp on which profile is taken. Refer to *../../type/basic.json#/definitions/timestamp*.
  - **`operation`**: Operation performed. Refer to *#/definitions/dmlOperationType*.
  - **`rowsAffected`** *(integer)*: Number of rows affected.
- **`columnProfilerConfig`** *(object)*: This schema defines the type for Table profile config include Columns.
  - **`columnName`** *(string)*: Column Name of the table to be included.
  - **`metrics`** *(array)*: Include only following metrics. Default: `None`.
    - **Items** *(string)*
- **`partitionProfilerConfig`** *(object)*: This schema defines the partition configuration used by profiler.
  - **`enablePartitioning`** *(boolean)*: whether to use partition. Default: `False`.
  - **`partitionColumnName`** *(string)*: name of the column to use for the partition.
  - **`partitionIntervalType`**: Refer to *#/definitions/partitionIntervalTypes*.
  - **`partitionInterval`** *(integer)*: The interval to use for the partitioning.
  - **`partitionIntervalUnit`** *(string)*: unit used for the partition interval. Must be one of: `['YEAR', 'MONTH', 'DAY', 'HOUR']`.
  - **`partitionValues`** *(array)*: unit used for the partition interval.
  - **`partitionIntegerRangeStart`** *(integer)*: start of the integer range for partitioning. Default: `None`.
  - **`partitionIntegerRangeEnd`** *(integer)*: end of the integer range for partitioning. Default: `None`.
- **`sparkTableProfilerConfig`** *(object)*: Table Specific configuration for Profiling it with a Spark Engine. It is ignored for other engines. Cannot contain additional properties.
  - **`partitioning`** *(object)*: When reading big tables from sources, we optimize the reading by partitioning the data. This configuration is responsible for it. Cannot contain additional properties.
    - **`partitionColumn`** *(string)*: Column to partition on. It should be a date, timestamp or integer column. It is important for the data to be reasonably equally distributed across the partitions. Default: `None`.
    - **`lowerBound`** *(string)*: Lower bound of the partition range. If not provided, it will be fetched from the source. Default: `None`.
    - **`upperBound`** *(string)*: Upper bound of the partition range. If not provided, it will be fetched from the source. Default: `None`.
- **`tableProfilerConfig`** *(object)*: This schema defines the type for Table profile config.
  - **`profileSampleType`**: Refer to *#/definitions/profileSampleType*.
  - **`profileSample`** *(number)*: Percentage of data or no. of rows used to compute the profiler metrics and run data quality tests. Default: `None`.
  - **`samplingMethodType`**: Refer to *#/definitions/samplingMethodType*.
  - **`sampleDataCount`** *(integer)*: Number of sample rows to ingest when 'Generate Sample Data' is enabled. Default: `50`.
  - **`randomizedSample`** *(boolean)*: Whether to randomize the sample data or not. Default: `True`.
  - **`profileQuery`** *(string)*: Users' raw SQL query to fetch sample data and profile the table. Default: `None`.
  - **`excludeColumns`** *(array)*: column names to exclude from profiling. Default: `None`.
    - **Items** *(string)*
  - **`includeColumns`** *(array)*: Only run profiler on included columns with specific metrics. Default: `None`.
    - **Items**: Refer to *#/definitions/columnProfilerConfig*.
  - **`partitioning`**: Partitioning configuration. Refer to *#/definitions/partitionProfilerConfig*.
  - **`computeTableMetrics`** *(boolean)*: Option to turn on/off table metric computation. If enabled, profiler will compute table level metrics. Default: `True`.
  - **`computeColumnMetrics`** *(boolean)*: Option to turn on/off column metric computation. If enabled, profiler will compute column level metrics. Default: `True`.
  - **`sparkTableProfilerConfig`**: Table Specific configuration for Profiling it with a Spark Engine. It is ignored for other engines. Refer to *#/definitions/sparkTableProfilerConfig*. Default: `None`.
- **`tableProfile`** *(object)*: This schema defines the type to capture the table's data profile. Cannot contain additional properties.
  - **`timestamp`**: Timestamp on which profile is taken. Refer to *../../type/basic.json#/definitions/timestamp*.
  - **`profileSample`** *(number)*: Percentage of data or no. of rows we want to execute the profiler and tests on. Default: `None`.
  - **`profileSampleType`**: Refer to *#/definitions/profileSampleType*.
  - **`samplingMethodType`**: Refer to *#/definitions/samplingMethodType*.
  - **`columnCount`** *(number)*: No.of columns in the table.
  - **`rowCount`** *(number)*: No.of rows in the table. This is always executed on the whole table.
  - **`sizeInByte`** *(number)*: Table size in GB.
  - **`createDateTime`** *(string)*: Table creation time.
  - **`customMetrics`** *(array)*: Custom Metrics profile list bound to a column. Default: `None`.
    - **Items**: Refer to *#/definitions/customMetricProfile*.
- **`modelType`**: Must be one of: `['DBT', 'DDL']`.
- **`dataModel`** *(object)*: This captures information about how the table is modeled. Currently only DBT and DDL model is supported. Cannot contain additional properties.
  - **`modelType`**: Refer to *#/definitions/modelType*.
  - **`resourceType`** *(string)*: Resource Type of the model.
  - **`description`**: Description of the Table from the model. Refer to *../../type/basic.json#/definitions/markdown*.
  - **`path`** *(string)*: Path to sql definition file.
  - **`rawSql`**: This corresponds to rws SQL from `<model_name>.sql` in DBT. This might be null when SQL query need not be compiled as done in DBT. Refer to *../../type/basic.json#/definitions/sqlQuery*.
  - **`sql`**: This corresponds to compile SQL from `<model_name>.sql` in DBT. In cases where compilation is not necessary, this corresponds to SQL that created the table. Refer to *../../type/basic.json#/definitions/sqlQuery*.
  - **`upstream`** *(array)*: Fully qualified name of Models/tables used for in `sql` for creating this table.
    - **Items** *(string)*
  - **`owners`**: Owners of this Table. Refer to *../../type/entityReferenceList.json*. Default: `None`.
  - **`tags`** *(array)*: Tags for this data model. Default: `[]`.
    - **Items**: Refer to *../../type/tagLabel.json*.
  - **`columns`** *(array)*: Columns from the schema defined during modeling. In case of DBT, the metadata here comes from `schema.yaml`. Default: `None`.
    - **Items**: Refer to *#/definitions/column*.
  - **`generatedAt`**: Refer to *../../type/basic.json#/definitions/dateTime*.
- **`fileFormat`** *(string)*: File format in case of file/datalake tables. Must be one of: `['csv', 'csv.gz', 'tsv', 'avro', 'parquet', 'pq', 'pqt', 'parq', 'parquet.snappy', 'json', 'json.gz', 'json.zip', 'jsonl', 'jsonl.gz', 'jsonl.zip']`.


Documentation file automatically generated at 2025-08-12 05:39:47.683420+00:00.
